SERVER-72351 Fix incorrect generation of side writes for update operations