src/mongo/db/storage/column_store.h
@@ -882,6 +882,4 @@ struct SplitCellView {
         }
     }
 };
-
-using PathCellSet = std::vector<std::tuple<std::string, std::string, RecordId>>;
 }  // namespace mongo
